syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ojasare.grpcservice.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc GetOrder (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int64 order_id = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}